fix application registration issue